feat: complete artifact delivery workflow